# mpc-rbt-student

./: CMakeLists.txt  build.sh  comands.txt  config.json  debug_session.yml  example_receiver.service  example_sender.service  id_240456  id_240456.pub  run_receiver.sh  run_sender.sh  service_session.yml
behavior_trees/: warehouse_mission.xml
config/: bt_server.yaml
include/: Planning.hpp
include/mpc-rbt-solution/: Receiver.hpp
launch/: solution.launch.py
rosbag2_2026_03_10-19_12_10/: metadata.yaml  rosbag2_2026_03_10-19_12_10_0.db3
src/: Localization.cpp  MotionControl.cpp  Planning.cpp  Receiver.cpp  Sender.cpp  keyboard_control_node.cpp  planning_node.cpp
src/bt/: ConfirmLoadingService.cpp  GetDropoffService.cpp  GetTaskService.cpp  LookupPose.cpp  NavigateToPoseAction.cpp  bt_server.cpp
src/cv_3_pkg/: CMakeLists.txt  package.xml
src/cv_3_pkg/src/: cv_3_node.cpp
src/util/: Utils.cpp
